--- a/css/style.sass
+++ b/css/style.sass
@@ -19,6 +19,7 @@ body
   width: 100%
   padding-top: 4em
   border-bottom: 0.5em solid $primary
+  box-shadow: 10px 0 5px rgba(0,0,0,1)
 
   &__content
     text-align: center
@@ -77,13 +78,25 @@ body
 
 .heading
   display: flex
+  flex-flow: row
+  flex-wrap: wrap
   width: 100%
   max-width: 64em
   margin: 4em auto
+  justify-content: center
+
+  &__image
+    flex: 0 0
+    max-height: 320px
+    width: 100%
+
 
   &__content
+    flex: 1 1 auto
     margin: 1em 1em 1em 2em
     padding: 1em
+    max-width: 600px
+    align-self: center
 
     &__title
       color: $text-title
@@ -102,3 +115,4 @@ body
 
       line-height: 1.45
       font-size: 1.1em
+
