--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,5 @@
-$primary: #3569d9
+//$primary: #3569d9
+$primary: #507edb
 $background: #1a1d2d
 
 $text-title: #222
@@ -19,7 +20,6 @@ body
   width: 100%
   padding-top: 4em
   border-bottom: 0.5em solid $primary
-  box-shadow: 10px 0 5px rgba(0,0,0,1)
 
   &__content
     text-align: center
@@ -35,46 +35,49 @@ body
       color: #b4b4b4
       margin: 1em 0
 
-  &__nav
-    display: flex
-    flex-flow: row
-    flex-wrap: wrap
-    justify-content: center
-    margin-top: 2em
+.nav
+  display: flex
+  flex-flow: row
+  flex-wrap: wrap
+  justify-content: center
+  margin-top: 2em
 
-    &__item
-      position: relative
-      color: gray
-      text-decoration: none
-      text-transform: uppercase
-      font-weight: bold
-      padding: 1em
-      overflow: hidden
+  &__item
+    position: relative
+    color: gray
+    text-decoration: none
+    text-transform: uppercase
+    font-weight: bold
+    padding: 1em
+    overflow: hidden
+    z-index: 1
+    transition: color 0.3s ease
 
-      &::before
-        content: ''
-        position: absolute
-        background-color: transparentize($primary, 0.7)
-        left: 0
-        top: 0
-        width: 100%
-        height: 100%
-        transform: translateY(100%)
-        transition: transform 0.3s ease
-        z-index: 0
-
-      &:hover
-        color: white
-
-      &:not([data-selected])
-        &:hover::before
-          transform: translateY(0)
+    &::before
+      content: ''
+      position: absolute
+      background-color: transparentize($primary, 0.7)
+      left: 0
+      top: 0
+      width: 100%
+      height: 100%
+      transform: translateY(100%)
+      transition: transform 0.3s ease
+      z-index: -1
 
 
+    &:hover
+      color: white
 
-      &[data-selected]
-        color: white
-        background-color: $primary
+    &:not([data-selected])
+      &:hover::before
+        transform: translateY(0)
+
+
+
+    &[data-selected]
+      color: white
+      background-color: $primary
 
 .heading
   display: flex
@@ -86,13 +89,10 @@ body
   justify-content: center
 
   &__image
-    flex: 0 0
     max-height: 320px
-    width: 100%
-
+    width: auto
 
   &__content
-    flex: 1 1 auto
     margin: 1em 1em 1em 2em
     padding: 1em
     max-width: 600px
