Completed Initial Home Page
Added vector graphics for settings, support, tutorials, download

Added global and variables style sheets

Removed padding from content and added it to header and footer instead

Removed duplicate button code in header in favor of minor changes to the global button class

Created Components for icon and text blocks

--- a/src/assets/variables.sass
+++ b/src/assets/variables.sass
@@ -4,3 +4,6 @@ $primary: #507EDB
 $button-background-default: $background
 $button-background-hover: #2B2F44
 $button-background-active: $primary
+
+$button-text-default: #9F9F9F
+$button-text-active: white
