--- a/src/assets/variables.sass
+++ b/src/assets/variables.sass
@@ -1,5 +1,5 @@
 $background: #1A1D2D
-$primary: #507EDB
+$primary: #4a73c9
 
 $button-background-default: $background
 $button-background-hover: #2B2F44
