Cleaned Up CSS & Removed Unused & Fixed Mobile Alignment
Moved blocks and the media query for it into the globals css

Removed the centered property from the TextBlock Component and associated css

Added Extra slot to TextBlock for additional text

Fixed alignment of blue separator from IconBlock Component

--- a/src/assets/global.sass
+++ b/src/assets/global.sass
@@ -25,3 +25,14 @@ button.button
     color: $button-text-active
     background-color: $button-background-active
     transition: background-color 0.5s ease, color 0.2s ease
+
+.blocks
+  display: grid
+  width: 100%
+  max-width: 900px
+  grid-gap: 6em
+  margin: 5em auto
+
+@media screen and (max-width: 1150px)
+  .blocks
+    max-width: 700px
