Migrated App to NuxtJS

--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -18,10 +18,10 @@ button.button
 
   transition: background-color 0.2s ease, color 0.2s ease
 
-  &:hover:not(.router-link-exact-active)
+  &:hover:not(.nuxt-link-exact-active)
     background-color: $button-background-hover
 
-  &:is(.router-link-exact-active)
+  &:is(.nuxt-link-exact-active)
     color: $button-text-active
     background-color: $button-background-active
     transition: background-color 0.5s ease, color 0.2s ease
