Started Downloads Page & Content & Style Changes
Forced cursor to be pointer when hovering buttons

Refactored selected button syntax for older browser support (replaced :is with a the previous selector instead e.g .active-selector.button)

Set fixed height on footer logo to prevent bugs

Set max with for text block to only apply to centered text blocks

Added content data for the downloads list

Added test markdown for the up coming tutorials page

Added @nuxt/content to modules

Refactored slots to use the # syntax instead of v-slot

Added Downloads page with basic structure/layout

Deleted unused directory /store

--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -12,19 +12,22 @@ button.button
   letter-spacing: 0.1em
   padding: 1em 2em
   border-radius: 0.2em
+  cursor: pointer
 
   color: $button-text-default
   background-color: $button-background-default
-
   transition: background-color 0.2s ease, color 0.2s ease
 
-  &:hover:not(.nuxt-link-exact-active)
+  &:hover
     background-color: $button-background-hover
 
-  &:is(.nuxt-link-exact-active)
-    color: $button-text-active
+.nuxt-link-exact-active.button:not(.ignore-active)
+  transition: background-color 0.5s ease, color 0.2s ease
+  background-color: $button-background-active
+  color: $button-text-active
+
+  &:hover
     background-color: $button-background-active
-    transition: background-color 0.5s ease, color 0.2s ease
 
 .blocks
   display: grid
