TextBlock improvements & Line height
Line height on p element set globally to 1.5

Renamed class .block--icon to .block--iconified for more readability 

Removed numbered property from text block because it is no longer used (removed corresponding css)

Moved text block centered functionality into a mixin titled "centered" so that css is not being repeated

Documented all lines of css

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -12,6 +12,11 @@ h1, h2, h3, h4, h5, h6, input, button, p, span, a {
   -moz-osx-font-smoothing: grayscale;
 }
 
+p {
+  // Increased line height to make text more readable
+  line-height: 1.5;
+}
+
 // Buttons that are "a" elements
 a.button {
   text-decoration: none; // Remove the default text decoration (underline)
