--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -14,3 +14,5 @@ $button-background-active: $primary;
 
 $button-text-default: #9F9F9F;
 $button-text-active: white;
+
+$extra-link-colour: #343534;
