Added styling for lists in markdown

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -4,7 +4,7 @@
 @import "reset.scss";
 
 // Apply to all elements with text
-h1, h2, h3, h4, h5, h6, input, button, p, span, a {
+h1, h2, h3, h4, h5, h6, input, button, p, span, a, ul {
   // Set the font family
   font-family: "Roboto", Roboto, Avenir, Helvetica, Arial, sans-serif;
   // Apply font smoothing
