Changed scroll behavior to respect reduced motion setting

--- a/assets/css/reset.scss
+++ b/assets/css/reset.scss
@@ -353,3 +353,14 @@ template {
 [hidden] {
     display: none;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
+}
